[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/DialogueChoice.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ChoiceBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/menuhover.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/menuselect.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Characters/xenoTilt.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/annieRight.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Characters.tscn" type="PackedScene" id=11]

[node name="CardChoice" type="Node"]
script = ExtResource( 1 )

[node name="Characters" parent="." instance=ExtResource( 11 )]

[node name="Xeno" parent="Characters" index="0"]
texture = ExtResource( 5 )

[node name="Annie" parent="Characters" index="1"]
texture = ExtResource( 6 )

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ChoiceBubble" parent="Menu" instance=ExtResource( 2 )]
margin_left = 365.0
margin_top = 294.0
margin_right = 365.0
margin_bottom = 294.0

[node name="Text" parent="Menu/ChoiceBubble/BubbleMargin" index="1"]
text = "Mine does."

[node name="ChoiceBubble2" parent="Menu" instance=ExtResource( 2 )]
margin_left = 623.0
margin_top = 294.0
margin_right = 623.0
margin_bottom = 294.0

[node name="Text" parent="Menu/ChoiceBubble2/BubbleMargin" index="1"]
text = "We donâ€™t? I wish we did."

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 610, 331 )
stream = ExtResource( 3 )
bus = "SFX"

[node name="Select" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 610, 331 )
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="mouse_entered" from="Menu/ChoiceBubble/BubbleMargin/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/ChoiceBubble/BubbleMargin/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Menu/ChoiceBubble2/BubbleMargin/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/ChoiceBubble2/BubbleMargin/Button" to="." method="_on_Button2_pressed"]

[editable path="Characters"]
[editable path="Menu/ChoiceBubble"]
[editable path="Menu/ChoiceBubble2"]
